--- a/index.html
+++ b/index.html
@@ -17,8 +17,9 @@
       <button id="play">Play</button>
       <button id="stop">Stop</button>
     </div>
+    
+    <div id="alert-container"></div>
   </main>
-  <footer id="footer">audio api | chrome | <a href="https://github.com/origamid/natal-audio-api">code</a></footer>
   <script type="module" src="./js/audio.js"></script>
 </body>
 
